# ts2cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: json.h
src/: CMakeLists.txt
src/ts2cpp/: CMakeLists.txt  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  proto.ts
